# cookiecutter-uv

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  cookiecutter.json  prek.toml  pyproject.toml  zensical.toml
.github/: copilot-instructions.md
docs/: index.md
hooks/: post_gen_project.py
tests/: conftest.py  test_combinations.py  test_cookiecutter.py
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE_BSD  LICENSE_MIT  Makefile  README.md  prek.toml  pyproject.toml  zensical.toml
{{cookiecutter.project_name}}/.github/workflows/: ci.yml  docs.yml  pr-title.yml  publish.yml
{{cookiecutter.project_name}}/docs/: {{cookiecutter.project_slug}}.md
{{cookiecutter.project_name}}/tests/: test.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: main.py
