[project]
name = "cookiecutter-uv"
version = "0.1.0"
description = "A python cookiecutter template to create a new python project with uv"
authors = [{ name = "Neyas Guruswamy", email = "neyasg@gmail.com" }]
keywords = ["cookiecutter", "uv", "template"]
requires-python = ">=3.10,<4.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
]

[tool.uv]
package = false

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "zensical>=0.0.21",
    "mkdocstrings-python>=2.0.0"
]

[tool.ruff]
line-length = 120
fix = true
